--- a/src/scss/partials/_newsletter.scss
+++ b/src/scss/partials/_newsletter.scss
@@ -8,6 +8,7 @@
     .captcha-container {
       display: inline-block;
       margin-top: 25px;
+      width: 100%;
     }
   }
   button,
