--- a/src/scss/partials/_responsive.scss
+++ b/src/scss/partials/_responsive.scss
@@ -3,3 +3,9 @@
     @content;
   }
 }
+
+@mixin media-min-max-width($min-breakpoint, $max-breakpoint) {
+  @media (min-width: $min-breakpoint) and (max-width: $max-breakpoint) {
+    @content;
+  }
+}
